--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".EditActivity" />
+        <activity android:name=".ShowActivity" />
+        <activity android:name=".ShareActivity" />
+        <activity android:name=".MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditActivity" />
-        <activity android:name=".ShowActivity" />
-        <activity android:name=".ShareActivity"></activity>
+
+
+        <activity android:name=".FindFile"></activity>
     </application>
 
 </manifest>
