--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        >
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".EditActivity" />
         <activity android:name=".ShowActivity" />
@@ -21,7 +23,11 @@
 
         </activity>
         <activity android:name=".FindFile" />
-        <activity android:name=".Splash">
+        <activity android:name=".Splash"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
